[project]
name = "example-python-project"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "granian>=1.7.5",
    "fastapi>=0.115.6",
]

[dependency-groups]
dev = [
    "pytest>=8.3.4",
]

[project.scripts]
example-python-project = "example_python_project:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
